--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -2,28 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Pokemon Go Map - Statistics</title>
-
-    <!-- Fav- & Apple-Touch-Icons -->
-    <!-- Favicon -->
-    <link rel="shortcut icon" href="{{ url_for('static', filename='appicons/favicon.ico').lstrip('/') }}" type="image/x-icon">
-    <!-- non-retina iPhone pre iOS 7 -->
-    <link rel="apple-touch-icon" href="{{ url_for('static', filename='appicons/114x114.png').lstrip('/') }}" sizes="57x57">
-    <!-- non-retina iPad pre iOS 7 -->
-    <link rel="apple-touch-icon" href="{{ url_for('static', filename='appicons/144x144.png').lstrip('/') }}" sizes="72x72">
-    <!-- non-retina iPad iOS 7 -->
-    <link rel="apple-touch-icon" href="{{ url_for('static', filename='appicons/152x152.png').lstrip('/') }}" sizes="76x76">
-    <!-- retina iPhone pre iOS 7 -->
-    <link rel="apple-touch-icon" href="{{ url_for('static', filename='appicons/114x114.png').lstrip('/') }}" sizes="114x114">
-    <!-- retina iPhone iOS 7 -->
-    <link rel="apple-touch-icon" href="{{ url_for('static', filename='appicons/120x120.png').lstrip('/') }}" sizes="120x120">
-    <!-- retina iPad pre iOS 7 -->
-    <link rel="apple-touch-icon" href="{{ url_for('static', filename='appicons/144x144.png').lstrip('/') }}" sizes="144x144">
-    <!-- retina iPad iOS 7 -->
-    <link rel="apple-touch-icon" href="{{ url_for('static', filename='appicons/152x152.png').lstrip('/') }}" sizes="152x152">
-    <!-- retina iPhone 6 iOS 7 -->
-    <link rel="apple-touch-icon" href="{{ url_for('static', filename='appicons/180x180.png').lstrip('/') }}" sizes="180x180">
-
+    <title>Map - Statistics</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='dist/css/app.min.css').lstrip('/') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='dist/css/statistics.min.css').lstrip('/') }}">
     <script src="{{ url_for('static', filename='js/vendor/modernizr.custom.js').lstrip('/') }}"></script>
@@ -41,7 +20,7 @@
         <!-- Header -->
         <header id="header">
             <a href="#nav">Options</a>
-            <h1><a href="..">Pokémon Go Map</a></h1>
+            <h1><a href="..">Map</a></h1>
         </header>
         <nav id="nav">
             {% for name, item in valid_input.items() %}
